--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+body, h2, p{
+  margin: 0;
+  padding: 0;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: blueviolet;
+  padding: 3em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+header img{
+  width: 14%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
+  margin-top: 1em;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+}
+main img.illustration{
+  width: 58%;
+}
+main img.desktopbackground{
+  background-repeat:no-repeat;
+  background-size: cover;
+}
+div.content{
+  width: 32%;
+  padding-top: 3em;
+}
+
+.content h2{
   color: white;
+  font-size: 35px;
+}
+.content p{
+  margin-top: 2em;
+  color: white;
+  font-size: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+main button{
+  padding: 1em;
+  border: none;
+  border-radius: 30px;
+  color:purple;
+  background-color: white;
+  width: 40%;
+  margin-top: 2em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main button:hover{
+  
+  color:white;
+  background-color:rebeccapurple;
+  
 }
